# PruebaTecnica

./: .gitignore  CMakeLists.txt  NOTE.txt  README.md
include/Actia/: Filter.hpp  IModule.hpp  Logger.hpp  Queue.hpp  Random.hpp
log/: log.txt
src/: main.cpp
src/Actia/: Filter.hpp  Logger.hpp  Random.hpp
src/filter/: Filter.cpp
src/logger/: Logger.cpp
src/rng/: Random.cpp
